<resources>
    <string name="interneterror">网络异常,请检查网络连接！</string>
    <string name="farm_default_name">新农云</string>
    <string name="app_name">新农云</string>
    <string name="action_settings">Settings</string>
    <string name="text1_activity_splash">精细化生产，互动化营销</string>
    <string name="text2_activity_splash">云禾科技@</string>
    <string name="farming_newSuccess">添加种养成功</string>
    <string name="farming_maturingat_modify_success">修改成功</string>
    <string name="farming_maturingat_modify_success_defaule">报警数值已恢复为默认</string>
    <string name="farming_maturingat_modify_anim">禽畜不存在成熟时间</string>
    <string name="farming_maturingat_beings">调整成熟日期</string>
    <string name="farming_maturingat_beings_head">设置预计成熟日期</string>
    <string name="farming_maturingat_beings_select">选择成熟时间</string>
    <string name="beingnew_anim_head">新建禽畜</string>
    <string name="beingnew_dialog_head">请选择</string>
    <string name="beingnew_anim_namehint">输入禽畜名称</string>
    <string name="beingnew_crop_head">新建作物</string>
    <string name="beingnew_crop_namehint">输入作物名称</string>
    <string name="beingselect_collecthead">选择设备</string>
    <string name="beingselect_collectselect_error">请选择至少一个设备</string>
    <string name="beingnew_name_empty"> 名称不能为空</string>
    <string name="beingnew_camera">拍照&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="beingnew_fromsd">本地上传</string>
    <string name="beingnew_create">确认新建</string>
    <string name="main_zhuye">主页</string>
    <string name="main_renwu">通知</string>
    <string name="main_farm">农场</string>
    <string name="main_riji">日记</string>
    <string name="xinzhong">新种</string>
    <string name="xinyang">新养</string>
    <string name="paishipin">拍视频</string>
    <string name="fariji">发日记</string>
    <string name="maturingAt">成熟期</string>
    <string name="animation">禽畜</string>
    <string name="crop">作物</string>
    <string name="farmconfig_newfarm">新建农场</string>
    <string name="farmconfig_addfarm">加入农场</string>
    <string name="farmconfig_changeBG">替换背景</string>
    <string name="farmconfig_GPS">GPS定位</string>
    <string name="farmconfig_GPS_content">将进行GPS定位</string>
    <string name="farmconfig_changefarm_address_head">农场地址</string>
    <string name="farmconfig_newfarm_TOKEN">登录异常,请重试</string>
    <string name="farmconfig_newfarm_name">农&#160;&#160;场&#160;&#160;名</string>
    <string name="farmconfig_newfarm_name_change">农场名</string>
    <string name="farmconfig_newfarm_name_change_error">农场名不能为空或格式不正确</string>
    <string name="farmconfig_newfarm_address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址</string>
    <string name="farmconfig_newfarm_address_defaule">地址</string>
    <string name="farmconfig_newfarm_farmBG">设置背景图</string>
    <string name="farmconfig_newfarm_farmLogo">设置LOGO</string>
    <string name="farmconfig_newfarm_farmIntroduce">农场简介</string>
    <string name="farmconfig_newfarm_farmIntroduce_error">农场简介不能为空或字数过多</string>
    <string name="farmconfig_newfarm_farmIntroducehint">输入一段话介绍你的农场吧</string>
    <string name="farmconfig_newfarm_cancelFarm">取消农场</string>
    <string name="farmconfig_newfarm_saveFarm">保存农场</string>
    <string name="farmconfig_newfarm_saveFarmSuccess">保存农场成功</string>
    <string name="farmconfig_newfarm_saveFarmFail">保存农场失败</string>
    <string name="farmconfig_newfarm_exitFarm">退出农场</string>
    <string name="farmconfig_exitFarm_tishi">您确定要退出农场吗？</string>
    <string name="farmconfig_newfarm_deleteFarm">删除农场</string>
    <string name="farmconfig_deleteFarm_tishi">您是农场的超级管理员，将会删除农场所有相关信息，确定删除？</string>
    <string name="farmconfig_deleteFarm_tishi2">请再次确认是否删除农场，删除后所有数据无法恢复！</string>
    <string name="farmconfig_newfarm_deleteFarmRights">对不起，您无权删除农场,只能退出</string>
    <string name="farmconfig_newfarm_exitFarmRights">对不起，您无权退出农场,只能删除农场</string>
    <string name="box_collect_manage_name">名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称</string>
    <string name="box_collect_manage_name_hint">请输入要修改的名称</string>
    <string name="box_collect_manage_soliyupe">土壤类型</string>
    <string name="box_collect_manage_soliyupe_hint">请选择类型</string>
    <string name="box_collect_type1">云盒子</string>
    <string name="box_collect_type2">云蘑菇</string>
    <string name="farmconfig_collect_notinyoufarm">对不起,该设备属于其它农场，您无权操作</string>
    <string name="farmconfig_collect_notconnectusb">对不起,该设备尚未连接USB进行配对,请先配对,然后重新扫描</string>
    <string name="farmconfig_collect_joinfarm">检测到农场信息,是否加入？</string>
    <string name="box_collect_name_modify_head">设置名称</string>
    <string name="box_collect_name_empty">设备名称不能为空或过长</string>
    <string name="box_collect_save_success">保存成功</string>
    <string name="box_collect_detail_today">今日</string>
    <string name="box_collect_detail_sevenday">7日</string>
    <string name="login_phonenumber">手机号</string>
    <string name="login_phonehint"></string>
    <string name="login_pwd">密&#160;&#160;&#160;&#160;码</string>
    <string name="login_pwdhint"></string>
    <string name="login_login">登录</string>
    <string name="login_logining">正在登录...</string>
    <string name="login_zhuce">注册</string>
    <string name="login_fingpwd">找回密码</string>
    <string name="login_phonepwdform">手机号或密码格式不正确</string>
    <string name="login_phonepwdempty">手机号或密码不能为空</string>
    <string name="login_fail">登录失败</string>
    <string name="login_fail_farmat">登录错误</string>
    <string name="zhuce">注册</string>
    <string name="zhuce_error">注册失败</string>
    <string name="zhuce_btn_hqyzm">获取验证码</string>
    <string name="zhuce_btn_cxhqyzm">重新发送</string>
    <string name="zhuce_btn_newaccount">创建账户</string>
    <string name="zhuce_btn_newaccounting">正在创建</string>
    <string name="zhuce_btn_tjyzm">提交验证码</string>
    <string name="zhuce_btn_success">完成注册</string>
    <string name="zhuce_tv_phonenumber">手&#160;&#160;机&#160;&#160;号</string>
    <string name="zhuce_tv_yzm">验&#160;&#160;证&#160;&#160;码</string>
    <string name="zhuce_tv_yzmhint">由4位数字组成</string>
    <string name="zhuce_tv_mm">设置密码</string>
    <string name="zhuce_et_pwdhint">6-10位字母或数字</string>
    <string name="zhuce_tv_secpwd">确认密码</string>
    <string name="zhuce_fail">注册失败,该手机号已被使用</string>
    <string name="zhuce_phoneform">手机号格式不正确</string>
    <string name="zhuce_phoneempty">手机号不能为空</string>
    <string name="zhuce_yzmempty">信息不完整</string>
    <string name="zhuce_submit_farmart_error">手机号，验证码或密码格式错误</string>
    <string name="zhuce_getyzmfail">获取验证码失败,请重新获取</string>
    <string name="zhuce_yzmerror">验证码错误，请重新输入</string>
    <string name="resetPwd">重置密码</string>
    <string name="zhuce_btn_resetPwd">修改密码</string>
    <string name="zhuce_btn_resetPwding">正在修改</string>
    <string name="zhuce_btn_resetPwd_sueecss">修改密码成功</string>
    <string name="zhuce_setnickname">你的姓名</string>
    <string name="zhuce_setnickname_head">用户已创建</string>
    <string name="zhuce_setnickname_isempty">姓名不能为空</string>
    <string name="save">保存</string>
    <string name="zhuce_nick_spili_text">或</string>
    <string name="zhuce_nick_dialog_isnickname">是否设置姓名</string>
    <string name="version_findnew">发现新版本</string>
    <string name="farm_sliding_menu">农场设置</string>
    <string name="baojing_sliding_menu">报警设置</string>
    <string name="hardconfig_sliding_menu">硬件设置</string>
    <string name="account_sliding_menu">账号设置</string>
    <string name="userinfo_sliding_menu">意见反馈</string>
    <string name="version_sliding_menu">版本3.0</string>
    <string name="contactus_sliding_menu">联系我们</string>
    <string name="exit_sliding_menu">退出账户</string>
    <string name="exit_application">退出当前账户？</string>
    <string name="userinfo_Modify_provious_pwd">原始密码</string>
    <string name="userinfo_Modify_new_pwd">新&#160;&#160;密&#160;&#160;码</string>
    <string name="userinfo_Modify_nickname_head">更改姓名</string>
    <string name="userinfo_touxiang">头像</string>
    <string name="userinfo_nickname">姓名</string>
    <string name="userinfo_weixin">微信</string>
    <string name="userinfo_weibo">微博</string>
    <string name="userinfo_phone">手机</string>
    <string name="userinfo_modifyPwd">修改密码</string>
    <string name="userinfo_nicknameempty">姓名不能为空且长度小于15个字符</string>
    <string name="userinfo_saveSuccess">保存成功</string>
    <string name="userinfo_previousPwdEmpty">原始密码不能为空</string>
    <string name="userinfo_previousPwdError">原始密码输入有误</string>
    <string name="userinfo_newEmpty">新密码不能为空或格式错误</string>
    <string name="userinfo_modifyPwdSuccess">密码修改成功</string>
    <string name="userinfo_ResetPwdSuccess">重置密码成功</string>
    <string name="userinfo_SecPwdEmpty">确认密码不能为空</string>
    <string name="userinfo_NewSecPwdSame">新密码和确认密码必须保持一致</string>
    <string name="userinfo_NewOldPwdSame">新密码和原始密码不能相同</string>
    <string name="capture_title">二维码扫描</string>
    <string name="title">扫一扫</string>
    <string name="from_gallery">相册选择</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="msg_camera_framework_bug">抱歉,Android相机出现问题,您可能需要重启设备。</string>
    <string name="msg_default_status">请将二维码置于屏幕中间\n(若光线暗请按音量的增加键)</string>
    <string name="msg_add_status">请将二维码置于屏幕中间\n(若光线暗请按音量的增加键)</string>
    <string name="memo">提示</string>
    <string name="add_collect_to_farm">您确定要将该设备加入自己农场吗？</string>
    <string name="new_collect_to_farm">检测到全新设备,您需要先配置自己的农场</string>
    <string name="barcode_msg_fail">扫描失败</string>
    <string name="barcode_one_dimen_success">该二维码不是新农云硬件设备信息,请重新扫描</string>
    <string name="beingSelect_MaturingAt">请设置成熟日期</string>
    <string name="farming_from_to_splite">--</string>
    <string name="farming_from_to_temunit">℃</string>
    <string name="farming_from_to_lightunit">Lx</string>
    <string name="farming_from_to_humunit">%</string>
    <string name="farming_from_to_coounit">ppm</string>
    <string name="hum">湿度</string>
    <string name="tem">温度</string>
    <string name="kpa">kPa</string>
    <string name="ludian">露点</string>
    <string name="qiya">气压</string>
    <string name="coo">CO₂</string>
    <string name="hum_soil">土湿</string>
    <string name="tem_soil">土温</string>
    <string name="light">光照</string>
    <string name="update">更新</string>
    <string name="farmingAlarm_setting_normal_tv">设定数据正常范围</string>
    <string name="farmingAlarm_setting_normal_btn">恢复默认设置</string>
    <string name="farmingAlarm_setting_tem_tv">空气温度：</string>
    <string name="farmingAlarm_setting_tem_tv_show">空气温度</string>
    <string name="farmingAlarm_setting_hum_tv">空气湿度：</string>
    <string name="farmingAlarm_setting_hum_tv_show">空气湿度</string>
    <string name="farmingAlarm_setting_num_error">数值设置不合理</string>
    <string name="farmingAlarm_setting_num_error_tem">温度上下限设置不合理</string>
    <string name="farmingAlarm_setting_num_error_blower">风口膜行程设置不合理</string>
    <string name="farmingAlarm_setting_soilhum_tv">土壤湿度：</string>
    <string name="farmingAlarm_setting_soilhum_tv_show">土壤湿度</string>
    <string name="farmingAlarm_setting_back_btn">返回</string>
    <string name="dilaog_submit">确定</string>
    <string name="dilaog_cancel">取消</string>
    <string name="dilaog_zhi">至</string>
    <string name="farming_maturingat_setting">输入预计的成熟日期</string>
    <string name="power">电量</string>
    <string name="signal">信号</string>
    <string name="contact_us_weixin">扫描二维码关注官方微信</string>
    <string name="contact_us_company_name">云禾科技（北京）有限公司</string>
    <string name="contact_us_telephone">010-82600638</string>
    <string name="contact_us_websit">www.yuncrop.com</string>
    <string name="addfarm_first_has_head">如果你农场的超级管理员已完成农场配置，请扫描农场里任意设备的二维码，成为农场成员，并</string>
    <string name="addfarm_first_has_content1">1.定期更新作物禽畜品种和成熟日期</string>
    <string name="addfarm_first_has_content2">2.经常拍摄农场视频，与消费者互动</string>
    <string name="addfarm_first_not_head">如果你的农场第一次使用新农云，你需要新建农场，成为超级管理员，并</string>
    <string name="addfarm_first_not_content1">1.扫描所有新设备的二维码，将它们加入农场</string>
    <string name="addfarm_first_not_content2">2.将作物或禽畜关联到具体设备，启用硬件</string>
    <string name="farm_add_create_head">请选择</string>
</resources>