<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_clolr_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44"
        android:background="@drawable/radial_gradient" >

        <ImageView
           android:id="@+id/zhuce_return"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/setting_selector"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:src="@drawable/return_button" />
     
        <TextView
            android:id="@+id/zhuceHead_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textsizebig"
            android:text="@string/zhuce" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_height="31dp"
        android:id="@+id/llzhucesjhm"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zhuce_tv_phonenumber"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/zhuce_et_sjhm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg_line"
            android:hint="@string/login_phonehint"
            android:textSize="14sp"
            android:inputType="phone" />

        
    </LinearLayout>

    <RelativeLayout
        android:layout_height="46dp"
        android:id="@+id/zhuceyzm"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/yan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zhuce_tv_yzm"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/yan"
            android:layout_marginLeft="10dp"
            android:id="@+id/zhuce_et_yzm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:background="@drawable/edittext_bg_line"
            android:inputType="number" />

       <TextView
            
            android:id="@+id/zhuce_get_yanzhengma"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_alignRight="@+id/zhuce_et_yzm"
            android:text="@string/zhuce_btn_hqyzm"
            android:textColor="@color/text_white"
            android:background="@drawable/register_btn_selector"
            android:textSize="@dimen/yangzhengmasize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_height="46dp"
        android:id="@+id/zhucellpwd"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zhuce_tv_mm"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/zhuce_et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:textSize="14sp"
            android:hint="@string/zhuce_et_pwdhint"
            android:background="@drawable/edittext_bg_line"
            android:inputType="textPassword" />
      
    </LinearLayout>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/zhuce_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn_selector"
        android:text="@string/zhuce_btn_newaccount"
        android:textColor="@color/text_white"
        android:textSize="@dimen/textsizebig" />

</LinearLayout>