<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/login_weixin_weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dip">

        <Button
            android:layout_marginLeft="20dip"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:background="@drawable/login_wexin" 
            android:layout_alignParentLeft="true"
            />
        <Button
            android:layout_marginRight="20dip"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dip"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:background="@drawable/login_webo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llname"
        android:layout_below="@+id/login_weixin_weibo"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="120dp" >

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_phonenumber"
            android:textColor="@color/text_black" />

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/login_et_sjhm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:background="@drawable/edittext_bg_line"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llpwd"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/llname" >

        <TextView
            android:id="@+id/tv_pwd"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_pwd"
            android:textColor="@color/text_black" />

        <EditText
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:id="@+id/login_et_pwd"
            android:background="@drawable/edittext_bg_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pwdhint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llpwd"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_btn_selector"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textsizebig"
            android:text="@string/login_login" />

        <Button
            android:id="@+id/login_btn_zc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dip"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textsizebig"
            android:background="@drawable/register_btn_selector"
            android:text="@string/login_zhuce" />

        <Button
            android:id="@+id/login_btn_zhmm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dip"
            android:background="#ffffff"
            android:textSize="@dimen/textsizelittle"
            android:textColor="@color/text_grey"
            android:text="@string/login_fingpwd" />
    </LinearLayout>

</RelativeLayout>