<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44"
        android:background="@drawable/radial_gradient" >

        <ImageView
            android:id="@+id/farm_add_create_Return"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/setting_selector"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/return_button" />

        <TextView
            android:id="@+id/userInfoModifyHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/farm_add_create_head"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textsizebig" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/list_line" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/list_line" />

            <ScrollView 
                android:background="@drawable/kuang"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
               
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="30dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addfarm_first_has_head"
                    android:textColor="@color/text_black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/addfarm_first_has_content1"
                    android:textColor="#999999"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/addfarm_first_has_content2"
                    android:textColor="#999999"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/farm_add_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/farm_add_iv_selector" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginRight="-10dp"
                    android:layout_marginTop="30dp"
                    android:background="#e0e0e0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addfarm_first_not_head"
                    android:textColor="@color/text_black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/addfarm_first_not_content1"
                    android:textColor="#999999"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/addfarm_first_not_content2"
                    android:textColor="#999999"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/farm_create_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/farm_create_iv_selector" />
            </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/list_line" >

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/list_line" />

</LinearLayout>