<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/farmconfig_newfarm_LL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44"
        android:background="@drawable/radial_gradient" >

        <ImageView
            android:id="@+id/farmConfigChangeReturn"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/setting_selector"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/return_button" />

        <TextView
            android:id="@+id/farmChangeHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contactus_sliding_menu"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textsizebig" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/list_line" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/list_line" />

            <View
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/qrcode_for_ytx" />

            <com.xinnongyun.view.CanvasRQ
                android:id="@+id/contacu_us_iv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/ic_launcher"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contact_us_weixin"
                android:textColor="@color/text_black"
                android:textSize="@dimen/textsizebig" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contact_us_company_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/textsizenormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/contact_us_telephone"
                android:textColor="@color/text_black"
                android:textSize="@dimen/textsizenormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/contact_us_websit"
                android:textColor="@color/text_black"
                android:textSize="@dimen/textsizenormal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/list_line" >
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/list_line" />

</LinearLayout>